// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Row component should render with given styles 1`] = `
<Component
  style={
    Array [
      Object {
        "flexDirection": "row",
      },
      Object {
        "padding": 10,
      },
    ]
  }
>
  <Component />
</Component>
`;

exports[`Row component should render with no styles 1`] = `
<Component
  style={
    Array [
      Object {
        "flexDirection": "row",
      },
      Object {},
    ]
  }
>
  <Component />
</Component>
`;
